1.2.8p12:
    Core & Setup:
    * 3857 FIX: Creation of crash reports could lead to further bugs...
    * 3889 FIX: Fixed incompatiblity with Python 2.4 (CentOS 5.5) introduced with 1.2.8p11...
    * 3737 FIX: Fixed slow activation of changes due to loss of IP address cache...

    Checks & Agents:
    * 3837 FIX: Fixed empty check if lnx_if info contains additional line...
    * 3804 FIX: Datasource programs: fixed possible Check_MK Helper exception when creation of subprocess fails
    * 3808 FIX: df.include: fixed incorrect levels calculations on very small filesystems...
    * 3809 FIX: windows agent: no longer truncates plugin output, no longer freezes when plugin produces too much output...
    * 3813 FIX: check_mail: fixed missing base64 decoding on multipart mails
    * 3888 FIX: df checks: Fixed invalid displayed WARN / CRIT lines in graphs when using "bytes left" thresholds
    * 3840 FIX: cisco_qos: Fixed wrong units in graphs...
    * 3890 FIX: check_mk_agent.openbsd: Fixed broken MRPE checks
    * 3814 FIX: win_netstat: fixed unicode warning while parsing data
    * 3880 FIX: check_sql: fixed missing number in check details

    Multisite:
    * 3874 FIX: fixed graphs displaying wrong labels
    * 3858 FIX: Fixed crash report and snapshot creation when using Python <2.5 (e.g. with CentOS 5)
    * 3885 FIX: Fixed sorting of version in werk list (1.2.8p10 and 1.2.8p11 were not listed on top)

    WATO:
    * 3881 FIX: fixed automation call 'delete piggyback host'

    Notifications:
    * 3860 FIX: EC condition: Fixed default value of rule id selection

    Event Console:
    * 3884 FIX: Notifications: Fixed wrong LASTSERVICESTATE and SERVICESTATE in EC notifications...

    HW/SW-Inventory:
    * 3811 FIX: HW/SW Inventory: Fixed GUI display crash when querying data from older software versions...
    * 3882 FIX: mk_inventory.linux: fixed wrong graphic card section name


1.2.8p11:
    Checks & Agents: