@@ -3,6 +3,7 @@
     * 3857 FIX: Creation of crash reports could lead to further bugs...
     * 3889 FIX: Fixed incompatiblity with Python 2.4 (CentOS 5.5) introduced with 1.2.8p11...
     * 3737 FIX: Fixed slow activation of changes due to loss of IP address cache...
+    * 3893 FIX: Predictive levels: Improved handling of broken prediction files (empty files)...
 
     Checks & Agents:
     * 3837 FIX: Fixed empty check if lnx_if info contains additional line...
